WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156395
[EFL] alert box is not displayed
https://bugs.webkit.org/show_bug.cgi?id=156395
Summary
[EFL] alert box is not displayed
Jinwoo Song
Reported
2016-04-07 23:31:06 PDT
Alert box is not displayed with following error message. ./MiniBrowser
http://www.w3schools.com/jsref/tryit.asp?filename=tryjsref_alert
ERR<2090>:ecore lib/ecore/ecore_main.c:1283 ecore_main_loop_begin() Running ecore_main_loop_begin() inside an existing main loop
Attachments
Patch
(6.28 KB, patch)
2016-09-22 01:24 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(6.07 KB, patch)
2016-09-22 04:31 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(6.07 KB, patch)
2016-09-22 17:52 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(6.06 KB, patch)
2016-09-22 19:34 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2016-09-22 01:24:50 PDT
Created
attachment 289536
[details]
Patch
Gyuyoung Kim
Comment 2
2016-09-22 02:07:35 PDT
Comment on
attachment 289536
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=289536&action=review
> Tools/MiniBrowser/efl/main.c:1427 > +
Remove unnecessary spaces.
> Tools/MiniBrowser/efl/main.c:1429 > +
ditto.
Hunseop Jeong
Comment 3
2016-09-22 04:31:40 PDT
Created
attachment 289546
[details]
Patch
Hunseop Jeong
Comment 4
2016-09-22 17:52:24 PDT
Created
attachment 289637
[details]
Patch
Gyuyoung Kim
Comment 5
2016-09-22 17:57:08 PDT
Comment on
attachment 289637
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=289637&action=review
LGTM with nits.
> Tools/MiniBrowser/efl/main.c:1414 > +
Unnecessary spaces.
> Tools/MiniBrowser/efl/main.c:1441 > +
Unnecessary spaces.
> Tools/MiniBrowser/efl/main.c:1471 > +
Unnecessary spaces.
Hunseop Jeong
Comment 6
2016-09-22 19:34:21 PDT
Created
attachment 289651
[details]
Patch
WebKit Commit Bot
Comment 7
2016-09-22 21:18:18 PDT
Comment on
attachment 289651
[details]
Patch Clearing flags on attachment: 289651 Committed
r206290
: <
http://trac.webkit.org/changeset/206290
>
WebKit Commit Bot
Comment 8
2016-09-22 21:18:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug